# mapuche-embedded

./: .gitignore  Cargo.toml  Makefile  README.md
src/: config.rs  db.rs  frame.rs  gc.rs  lib.rs  main.rs  server.rs  utils.rs
src/cmd/: cmdtype.rs  del.rs  dogc.rs  exists.rs  expire.rs  get.rs  hdel.rs  hexists.rs  hget.rs  hgetall.rs  hincrby.rs  hkeys.rs  hlen.rs  hmget.rs  hset.rs  hstrlen.rs  hvals.rs  incrdecr.rs  keys.rs  lindex.rs  linsert.rs  llen.rs  lrange.rs  lrem.rs  lset.rs  ltrim.rs  mget.rs  mod.rs  mset.rs  pop.rs  push.rs  sadd.rs  scan.rs  scard.rs  set.rs  sismember.rs  smembers.rs  smismember.rs  spop.rs  srandmember.rs  (+17 more)
src/rocks/: client.rs  errors.rs  gc.rs  hash.rs  list.rs  mod.rs  set.rs  string.rs  transaction.rs  zset.rs
src/rocks/encoding/: decode.rs  encode.rs  mod.rs
src/rocks/kv/: bound_range.rs  key.rs  kvpair.rs  mod.rs  value.rs
tests/: transaction_test.rs
