[package]
authors = ["xiaoyuz <alexanderxiaoyu@gmail.com>"]
name = "mapuche-embedded"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = """
An implementation of a Redis protocol embedded db, with RocksDB as KV storage.
"""
license = "MIT OR Apache-2.0"

[dependencies]
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rocksdb = { version = "0.20.1", features = ["multi-threaded-cf"] }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3" }
regex = "1"
rand = {version = "0.8.5", features = ["small_rng"] }
tokio-util = { version = "0.7.1", features = ["rt"] }
glob = "0.3.1"
anyhow = "1.0.70"
crc = "3.0.1"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0.57"
async-trait = "0.1.64"
